--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <body>
     <section id="nubityApp"></section>
     <script src="js/bundle.js"></script>
+    <script src="js/scripts.js"></script>
   </body>
 
 </html>
