--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <title>Nubity</title>
     <meta charset="UTF-8"> <!--Encoding -->
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!--Movile first -->
+    <link rel="shortcut icon" href="favicon.ico"/>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
     <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="node_modules/nubity-webfont/styles.css">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -18,7 +20,6 @@
   <body>
     <section id="nubityApp"></section>
     <script src="js/bundle.js"></script>
-    <script src="js/scripts.js"></script>
   </body>
 
 </html>
