[MN-608] Configure monitoring images
Feature: Normalized PNG RGB 160x100px 72DPi images for Infrastructure/Configure
Monitoring Section.

--- a/web/index.html
+++ b/web/index.html
@@ -3,18 +3,16 @@
   <head>
     <title>Nubity</title>
     <meta charset="UTF-8"> <!--Encoding -->
-    <meta name="viewport" content="width=device-width, initial-scale=1"> <!--Movile first -->
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <!--Mobile first -->
     <link rel="shortcut icon" href="favicon.ico"/>
     <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
     <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
     <link rel="stylesheet" type="text/css" href="node_modules/nubity-webfont/styles.css">
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/login-style.css">
   </head>
 
   <body>
