--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
     <link rel="stylesheet" type="text/css" href="node_modules/nubity-webfont/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 
