--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,39 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
     <link rel="stylesheet" type="text/css" href="node_modules/nubity-webfont/styles.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script type="text/javascript">
+      (function() {
+        var w = window;
+        var ic = w.Intercom;
+        if ('function' === typeof ic) {
+          ic('reattach_activator');
+          ic('update',intercomSettings);
+        } else {
+          var d = document;
+          var i = function() {
+            i.c(arguments)
+          };
+          i.q = [];
+          i.c = function(args) {
+            i.q.push(args)
+          };
+          w.Intercom = i;
+          function l() {
+            var s = d.createElement('script');
+            s.type = 'text/javascript';
+            s.async = true;
+            s.src = 'https://widget.intercom.io/widget/xs6j43ab';
+            var x = d.getElementsByTagName('script')[0];
+            x.parentNode.insertBefore(s,x);
+          }
+          if (w.attachEvent) {
+            w.attachEvent('onload',l);
+          } else {
+            w.addEventListener('load',l,false);
+          }
+        }
+      })()
+    </script>
   </head>
 
   <body>
