--- a/web/index.html
+++ b/web/index.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
     <link rel="stylesheet" type="text/css" href="node_modules/nubity-webfont/styles.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.full.js"></script>
+    <link rel="stylesheet" type="text/css" href="node_modules/react-select/dist/react-select.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="node_modules/alertifyjs/build/alertify.min.js"></script>
     <link rel="stylesheet" href="node_modules/alertifyjs/build/css/alertify.min.css" />
