--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
     <link rel="stylesheet" type="text/css" href="node_modules/nubity-webfont/styles.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="node_modules/alertifyjs/build/alertify.min.js"></script>
+    <link rel="stylesheet" href="node_modules/alertifyjs/build/css/alertify.min.css" />
+    <link rel="stylesheet" href="node_modules/alertifyjs/build/css/themes/default.min.css" />
     <script type="text/javascript">
       (function () {
         var w = window;
@@ -178,30 +181,29 @@
         };
       }));
     </script>
+    <script>
+      if ('my.nubity.com' === window.location.hostname) {
+        (function (i,s,o,g,r,a,m) {
+          i['GoogleAnalyticsObject'] = r;
+          i[r] = i[r] || function () {
+            (i[r].q=i[r].q||[]).push(arguments)
+          },
+          i[r].l = 1 * new Date();
+          a = s.createElement(o),
+          m = s.getElementsByTagName(o)[0];
+          a.async = 1;
+          a.src = g;
+          m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-38473356-1', 'auto');
+        ga('send', 'pageview');
+      }
+    </script>
   </head>
 
   <body>
     <section id="nubityApp"></section>
     <script src="js/bundle.js"></script>
   </body>
-  <script>
-    if ('my.nubity.com' === window.location.hostname) {
-      (function (i,s,o,g,r,a,m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-          (i[r].q=i[r].q||[]).push(arguments)
-        },
-        i[r].l = 1 * new Date();
-        a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-38473356-1', 'auto');
-      ga('send', 'pageview');
-    }
-  </script>
-
 </html>
